--- a/index.html
+++ b/index.html
@@ -85,9 +85,8 @@
         <span id="title"></span>
     </div>
     <ul id="services">
-        <li><a href="https://s.id/sumcaan">> Sumcaan - Sumber Bacaan</a></li>
-        <li><a href="#develop>> MLBB Rank Guess (in development)</a></li>
-        <li>make with ChatGPT</li>
+        <li><a href="https://s.id/sumcaan">> Sumcaan</a></li>
+        <li><a href="s.id/gtrml">> MLBB Rank Guess (in development)</a></li>
     </ul>
 
     <script>
