--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </div>
     <ul id="services">
         <li><a href="https://s.id/sumcaan">> Sumcaan</a></li>
-        <li><a href="https://s.id/gtrml">> Rank Guess MLBB (development)</a></li>
+        <li><a href="https://s.id/gtmlr">> Guess The MLBB Rank</a></li>
     </ul>
 
     <script>
