--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
     <ul id="services">
         <li><a href="https://s.id/sumcaan">> Sumcaan</a></li>
         <li><a href="https://s.id/gtmlr">> Guess The MLBB Rank</a></li>
+        <li><a href="https://supparries.github.io/link-click-share-maker">> Link Click-Share Maker</a></li>
     </ul>
 
     <script>
