--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
         <span id="title"></span>
     </div>
     <ul id="services">
-        <li><a href="https://s.id/sumcaan">> Sumcaan</a></li>
-        <li><a href="https://s.id/gtmlr">> Guess The MLBB Rank</a></li>
-        <li><a href="https://supparries.github.io/link-click-share-maker">> Link Click-Share Maker</a></li>
+        <li><a href="https://s.id/sumcaan">> Sumcaan - Sumber Bacaan</a></li>
+        <li><a href="https://s.id/gtmlr">> GTMLR - Tebak Rank Mobile Legends</a></li>
+        <li><a href="https://supparries.github.io/link-click-share-maker">> LC-SM - Link Click-Share Maker</a></li>
     </ul>
 
     <script>
