--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Support Carries 💚 make tools to help you.">
     <title>Supparries</title>
     <style>
         /* Mengatur tampilan halaman */
@@ -27,8 +28,8 @@
             overflow: hidden;
             white-space: nowrap;
             height: 1.5em;
-            margin-top: 60px;
-            margin-bottom: 30px;
+            margin-top: 30px;
+            margin-bottom: 15px;
             text-align: center;
         }
 
@@ -50,15 +51,16 @@
             padding: 0;
             font-size: 1em;
             margin: 0;
+            margin-top: 15px;
             text-align: left;
-            width: 80%; /* Menyesuaikan dengan lebar layar */
-            /* max-width: 600px; */ /* Maksimal lebar list, bisa dihapus */
-            word-wrap: break-word; /* Memungkinkan pemisahan kata agar tidak membuat baris baru */
+            width: 90%;
+            padding-left: 5%;
+            word-wrap: break-word;
         }
 
         li {
             margin: 5px 0;
-            word-break: break-word; /* Pecah kata hanya jika terlalu panjang */
+            word-break: break-word;
         }
 
         a {
@@ -77,7 +79,10 @@
                 font-size: 1em;
             }
             #services {
-                font-size: 0.9em;
+                font-size: 0.85em;
+                width: 95%;
+                padding-left: 3%;
+                margin-top: 10px;
             }
         }
     </style>
@@ -88,8 +93,9 @@
     </div>
     <ul id="services">
         <li><a href="https://s.id/sumcaan">> Sumcaan - Sumber Bacaan</a></li>
-        <li><a href="https://s.id/gtmlr">> GTMLR - Tebak Rank Mobile Legends</a></li>
-        <li><a href="https://supparries.github.io/link-click-share-maker">> LC-SM - Link Click-Share Maker</a></li>
+        <li><a href="https://s.id/gtmlr">> Tebak Rank Mobile Legends</a></li>
+        <li><a href="https://supparries.github.io/link-click-share-maker">> Link Click-Share Maker</a></li>
+        <li><a href="404.html">> 404 Page</a></li>
     </ul>
 
     <script>
