--- a/404.html
+++ b/404.html
@@ -98,7 +98,7 @@
     <script>
         // Animasi teks untuk judul
         const titleElement = document.getElementById('title');
-        const titles = ['404', 'Page Not Found', '404 - Page Not Found'];
+        const titles = ['404', 'Tool Not Found 💔', '404 - Page Not Found'];
         let titleIndex = 0;
         let charIndex = 0;
         let typing = true;
