--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <ul id="services">
         <li><a href="https://s.id/sumcaan">> Sumcaan - Sumber Bacaan</a></li>
         <li><a href="https://s.id/gtmlr">> Tebak Rank Mobile Legends</a></li>
-        <li><a href="https://s.id/lcsmaker>> Link Click-Share Maker</a></li>
+        <li><a href="https://s.id/sharelinkgenerator">> Share Link Generator</a></li>
         <li><a href="404.html">> 404 Page</a></li>
     </ul>
 
