--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
         <li><a href="https://s.id/sumcaan">> Sumcaan - Sumber Bacaan</a></li>
         <li><a href="https://s.id/gtmlr">> Tebak Rank Mobile Legends</a></li>
         <li><a href="https://s.id/sharelinkgenerator">> Share Link Generator</a></li>
+        <li><a href="https://lahelu.com/user/supparries">> Meme Teknologi</a></li>
         <li><a href="404.html">> 404 Page</a></li>
     </ul>
 
