Add Tebak Hero MLBB

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
     <ul id="services">
         <li><a href="https://s.id/sumcaan">> Sumcaan - Sumber Bacaan</a></li>
         <li><a href="https://s.id/gtmlr">> Tebak Rank Mobile Legends</a></li>
+        <li><a href="https://s.id/gtmlh">> Tebak Hero Mobile Legends</a></li>
         <li><a href="https://s.id/sharelinkgenerator">> Share Link Generator</a></li>
         <li><a href="https://lahelu.com/user/supparries">> Meme Teknologi</a></li>
         <li><a href="404.html">> 404 Page</a></li>
