--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
         <span id="title"></span>
     </div>
     <ul id="services">
-        <li><a href="https://s.id/sumcaan">> Sumcaan - Sumber Bacaan</a></li>
-        <li><a href="https://s.id/gtmlr">> Tebak Rank Mobile Legends</a></li>
-        <li><a href="https://s.id/gtmlh">> Tebak Hero Mobile Legends</a></li>
-<li><a href="https://s.id/emohero">> Tebak Hero ML dari Emoji</a></li>
-        <li><a href="https://s.id/sharelinkgenerator">> Share Link Generator</a></li>
+        <li><a href="https://supparries.github.io/sumcaan">> Sumcaan - Sumber Bacaan</a></li>
+        <li><a href="https://supparries.github.io/guess-the-mlbb-rank">> Tebak Rank Mobile Legends</a></li>
+        <li><a href="https://supparries.github.io/guess-the-mlbb-hero">> Tebak Hero Mobile Legends</a></li>
+<li><a href="https://supparries.github.io/emohero">> Tebak Hero ML dari Emoji</a></li>
+        <li><a href="https://supparries.github.io/sharelinkgenerator">> Share Link Generator</a></li>
         <li><a href="https://lahelu.com/user/supparries">> Meme Teknologi</a></li>
         <li><a href="404.html">> 404 Page</a></li>
     </ul>
