--- a/404.html
+++ b/404.html
@@ -92,7 +92,7 @@
         <span id="title"></span>
     </div>
     <ul id="services">
-        <li><a href="https://s.id/supparries">> Back to home page</a></li>
+        <li><a href="https://supparries.github.io">> Back to home page</a></li>
     </ul>
 
     <script>
