Add MLBB All Lane

--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
         <li><a href="https://supparries.github.io/guess-the-mlbb-rank">> Tebak Rank Mobile Legends</a></li>
         <li><a href="https://supparries.github.io/guess-the-mlbb-hero">> Tebak Hero Mobile Legends</a></li>
 <li><a href="https://supparries.github.io/emohero">> Tebak Hero ML dari Emoji</a></li>
-        <li><a href="https://supparries.github.io/sharelinkgenerator">> Share Link Generator</a></li>
+        <li><a href="https://supparries.github.io/share-link-generator">> Share Link Generator</a></li>
+<li><a href="https://s.id/mlbblegends">> Legenda Mistis MLBB</a></li>
         <li><a href="https://lahelu.com/user/supparries">> Meme Teknologi</a></li>
         <li><a href="404.html">> 404 Page</a></li>
     </ul>
