--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <li><a href="https://supparries.github.io/guess-the-mlbb-hero">> Tebak Hero Mobile Legends</a></li>
 <li><a href="https://supparries.github.io/emohero">> Tebak Hero ML dari Emoji</a></li>
         <li><a href="https://supparries.github.io/share-link-generator">> Share Link Generator</a></li>
-<li><a href="https://s.id/mlbblegends">> Legenda Mistis MLBB</a></li>
+<li><a href="https://mlbballlane.blogspot.com">> Legenda Mistis MLBB</a></li>
         <li><a href="https://lahelu.com/user/supparries">> Meme Teknologi</a></li>
         <li><a href="404.html">> 404 Page</a></li>
     </ul>
