New Era: Tools & Resource fpr EVeryone

--- a/index.html
+++ b/index.html
@@ -92,20 +92,18 @@
         <span id="title"></span>
     </div>
     <ul id="services">
-        <li><a href="https://supparries.github.io/sumcaan">> Sumcaan - Sumber Bacaan</a></li>
-        <li><a href="https://supparries.github.io/guess-the-mlbb-rank">> Tebak Rank Mobile Legends</a></li>
-        <li><a href="https://supparries.github.io/guess-the-mlbb-hero">> Tebak Hero Mobile Legends</a></li>
-<li><a href="https://supparries.github.io/emohero">> Tebak Hero ML dari Emoji</a></li>
+        <li><a href="#">>Tools</a></li>
         <li><a href="https://supparries.github.io/share-link-generator">> Share Link Generator</a></li>
-<li><a href="https://mlbballlane.blogspot.com">> Legenda Mistis MLBB</a></li>
-        <li><a href="https://lahelu.com/user/supparries">> Meme Teknologi</a></li>
+        <li><a href="#">>Resources</a></li>
+        <li><a href="https://supparries.github.io/sumcaan">> Sumcaan - Sumber Bacaan</a></li>
+        <li><a href="#">>Another</a></li>
         <li><a href="404.html">> 404 Page</a></li>
     </ul>
 
     <script>
         // Animasi teks untuk judul
         const titleElement = document.getElementById('title');
-        const titles = ['Supparries', 'Support Carries', 'SC'];
+        const titles = ['Supparries', 'Support Carries', 'Tools & Resources For Everyone', 'SC'];
         let titleIndex = 0;
         let charIndex = 0;
         let typing = true;
