New Era: Tools & Resources For Everyone

--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
         <span id="title"></span>
     </div>
     <ul id="services">
-        <li><a href="#">◉ Tools</a></li>
+        <li>◉ Tools</li>
         <li><a href="https://supparries.github.io/share-link-generator">> Share Link Generator</a></li>
-        <li><a href="#">◉ Resources</a></li>
+        <li>◉ Resources</li>
         <li><a href="https://supparries.github.io/sumcaan">> Sumcaan - Sumber Bacaan</a></li>
-        <li><a href="#">◉ Another</a></li>
+        <li>◉ Another</li>
         <li><a href="404.html">> 404 Page</a></li>
     </ul>
 
